    - 33increase_max_winmsg_renditions
    - 35screen_invoked_with_a_command
    - 40cjk_eastasian
    - 50EXP_tilde_expansion
  * Refreshed the following patches:
    - 10norootpassword
    - 14size_matters
    - 26source_encoding
  * Added patches from Fedora:
    - 02screen-cc: Additional assertions to improve stability
    - 03screen-ipv6: IPv6 support for built-in telnet

  [ Axel Beckert ]
  * Add myself as Uploader.
  * Remove Adam Lazur from Uploaders on his request.
  * New upstream snapshot based on 4.1.0 prerelease, commit 450e8f3 of
    2011-Aug-19.
  * Use dh_autoreconf
    - Build-Depend on dh-autoreconf

 -- Axel Beckert <abe@debian.org>  Tue, 04 Oct 2011 23:30:57 +0200

screen (4.0.3-14+hurd.1) unreleased; urgency=low

  * Fix #522689.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 06 Mar 2011 23:28:56 +0000

screen (4.0.3-14) unstable; urgency=low

  * Cherry-pick a few upstream commits:
    * f6b50e17 (create windows in detached session, closes: #466072).
    * 97708d58 (vertical split documentation, closes: #525998).
    * bb04008e (report session identifier on detach, closes: #199747).
  * Slightly adjust Homepage field.
  * Add support for build option 'noopt'.
  * Bump Standards version to 3.8.2, no changes.
  * Specify GPL version in d/copyright.

 -- Jan Christoph Nordholz <hesso@pool.math.tu-berlin.de>  Tue, 28 Jul 2009 13:21:24 +0200

screen (4.0.3-13) unstable; urgency=low

  * Sync with Ubuntu, closes: #520359. New dpatches:
    * 33increase_max_winmsg_renditions
    * 35screen_invoked_with_a_command (cherry-picked from upstream)
  * Bump Standards version to 3.8.1 (again, no changes).
  * Accommodate initscript to adjust the $SCREENDIR permissions
    correctly even if /usr/bin/screen is installed 0755.
    Add a Q&A pair to README.Debian to clarify this problem.
    Closes: #520317.
  * Fix #433338 properly by keeping the umask instead of dropping
    the 'public exchange file' concept. Modify dpatch 22.