@@ -31,6 +31,7 @@ screen (4.1.0~20110819git450e8f3) UNRELEASED; urgency=low
   * Added patches from Fedora:
     - 02screen-cc: Additional assertions to improve stability
     - 03screen-ipv6: IPv6 support for built-in telnet
+  * Enable telnet (Closes: #353090) and localized day/month names
 
   [ Axel Beckert ]
   * Add myself as Uploader.
